Se creo el archivo para las peticiones a la api

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,6 +12,9 @@
       "@/components/*": ["components/*"],
       "@/views/*": ["views/*"],
       "@/layouts/*": ["layouts/*"],
+      "@/api/*": ["api/*"],
+      "@/types/*": ["types/*"],
+      "@/lib/*": ["lib/*"],
     },
 
     /* Bundler mode */
