Se creo el cambio de estado de las tasks

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,6 +16,7 @@
       "@/types/*": ["types/*"],
       "@/lib/*": ["lib/*"],
       "@/utils/*": ["utils/*"],
+      "@/locales/*": ["locales/*"],
     },
 
     /* Bundler mode */
